--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,11 @@ section {
     font-size: 1.2rem;
 }
 
+.section-icon-padding {
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
 /* ----------------------------------------------- */
 /* NAVIGATION BAR                                  */
 /* ----------------------------------------------- */
@@ -86,6 +91,16 @@ a.navbar-brand {
     line-height: 145%;
     width: 70%;
     margin-left: 15%;
+}
+
+/* ----------------------------------------------- */
+/* ICONS                                           */
+/* ----------------------------------------------- */
+.icon-big {
+    font-size: 400%;
+    display: block;
+    color: #1a1a1a;
+    margin-bottom: 10px;
 }
 
 /* ----------------------------------------------- */
