--- a/css/main.css
+++ b/css/main.css
@@ -108,7 +108,7 @@ a.navbar-brand {
 /* ----------------------------------------------- */
 .full-screen-image {
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-        url(../img/hero-image-homepage.jpg);
+        url(../img/hero-image-homepage.webp);
     background-size: cover;
     background-position: center;
     height: 100vh;
