--- a/css/main.css
+++ b/css/main.css
@@ -214,6 +214,57 @@ a.navbar-brand {
     padding-bottom: 25px !important;
 }
 
+/* ----------------------------------------------- */
+/* TESTIMONIALS                                    */
+/* ----------------------------------------------- */
+
+.section-testimonials {
+    background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.8),
+        rgba(0, 0, 0, 0.8)),
+        url(../img/hero-image-homepage.webp);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+        url(../img/hero-image-homepage.webp);
+    background-size: cover;
+    /* Overwrite bootstrap */
+    color: #fff !important;
+    background-attachment: fixed;
+}
+
+.section-testimonials h2 {
+    /* Overwrite bootstrap */
+    color: #fff !important;
+}
+
+blockquote {
+    padding: 2%;
+    font-style: italic;
+    line-height: 145%;
+    position: relative;
+    margin-top: 40px;
+}
+
+blockquote:before {
+    content: "\201C";
+    font-size: 500%;
+    display: block;
+    position: absolute;
+    top: -5px;
+    left: -5px;
+}
+
+cite {
+    font-size: 90%;
+    margin-top: 25px;
+    display: block;
+}
+
+cite img {
+    height: 45px;
+    border-radius: 50%;
+    margin-right: 10px;
+    vertical-align: middle;
+}
+
 
 /* ----------------------------------------------- */
 /* FOOTER SECTION                                  */
