--- a/css/queries.css
+++ b/css/queries.css
@@ -69,4 +69,9 @@
     .cart-items-container {
         padding: 0 50px;
     }
+
+    section {
+        padding-left: 6%;
+        padding-right: 6%;
+    }
 }
