--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,10 @@ section {
     z-index: 1;
     width: 100vw;
     height: 100vh;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
 }
 
 .loader {
@@ -81,8 +85,8 @@ section {
     border: 8px solid white;
     border-radius: 50%;
     border-top: 8px solid #1a1a1a;
-    width: 120px;
-    height: 120px;
+    width: 100px;
+    height: 100px;
     -webkit-animation: spin 1s linear infinite;
     animation: spin 1s linear infinite;
 }
