--- a/css/main.css
+++ b/css/main.css
@@ -229,6 +229,8 @@ a.navbar-brand {
     border: 0;
     height: 100%;
     margin-bottom: 10px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19),
+        0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
 .card-body {
