--- a/css/login.css
+++ b/css/login.css
@@ -1,3 +1,11 @@
+/*
+
+Keegan Fargher
+17920334
+I confirm that this assignment is my own work and any work copied shall be referenced accordingly.
+
+*/
+
 .login-button {
 	margin: 30px 0;
 }
