--- a/css/queries.css
+++ b/css/queries.css
@@ -1,3 +1,11 @@
+/*
+
+Keegan Fargher
+17920334
+I confirm that this assignment is my own work and any work copied shall be referenced accordingly.
+
+*/
+
 /* USED TO MAKE HTML ELEMENTS RESPONSIVE */
 
 /* Extra large devices (large desktops, 1200px and up) */
