--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,10 @@ section {
     visibility: hidden;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 /* ----------------------------------------------- */
 /* REUSABLE COMPONENTS                             */
 /* ----------------------------------------------- */
