--- a/css/main.css
+++ b/css/main.css
@@ -76,42 +76,123 @@ body {
     padding-right: 40px;
 }
 
+.loading {
+    background: transparent url('../img/loader.gif') center no-repeat;
+    min-height: 150px;
+}
+
+/* MAIN LOADING ICON */
+
 .loader-background {
-    position: fixed;
-    background-color: rgba(0, 0, 0, 0.4);
-    z-index: 1;
+    position: sticky;
     width: 100vw;
     height: 100vh;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+    background: #1a1a1a;
+    z-index: 99999;
 }
 
 .loader {
+    width: 60px;
+    height: 60px;
     position: absolute;
-    left: 50%;
     top: 50%;
-    z-index: 1;
-    margin: -75px 0 0 -75px;
-    border: 8px solid white;
-    border-radius: 50%;
-    border-top: 8px solid #1a1a1a;
-    width: 100px;
-    height: 100px;
-    -webkit-animation: spin 1s linear infinite;
-    animation: spin 1s linear infinite;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
-@keyframes spin {
+.double-bounce1,
+.double-bounce2 {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: #fff;
+    opacity: 0.6;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
+    animation: sk-bounce 2.0s infinite ease-in-out;
+}
+
+.double-bounce2 {
+    -webkit-animation-delay: -1.0s;
+    animation-delay: -1.0s;
+}
+
+@-webkit-keyframes sk-bounce {
+
+    0%,
+    100% {
+        -webkit-transform: scale(0.0)
+    }
+
+    50% {
+        -webkit-transform: scale(1.0)
+    }
+}
+
+@keyframes sk-bounce {
+
+    0%,
+    100% {
+        transform: scale(0.0);
+        -webkit-transform: scale(0.0);
+    }
+
+    50% {
+        transform: scale(1.0);
+        -webkit-transform: scale(1.0);
+    }
+}
+
+/* LOADING ICON FOR BUTTONS */
+
+.spinner,
+.spinner:after {
+    border-radius: 50%;
+    width: 10em;
+    height: 10em;
+}
+
+.spinner {
+    margin: auto;
+    font-size: 3px;
+    border-top: 1.1em solid rgba(255, 255, 255, 0.2);
+    border-right: 1.1em solid rgba(255, 255, 255, 0.2);
+    border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
+    border-left: 1.1em solid #ffffff;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-animation: load8 1.1s infinite linear;
+    animation: load8 1.1s infinite linear;
+}
+
+@-webkit-keyframes load8 {
     0% {
+        -webkit-transform: rotate(0deg);
         transform: rotate(0deg);
     }
 
     100% {
+        -webkit-transform: rotate(360deg);
         transform: rotate(360deg);
     }
 }
+
+@keyframes load8 {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
 
 /* ----------------------------------------------- */
 /* NAVIGATION BAR                                  */
