--- a/css/main.css
+++ b/css/main.css
@@ -155,6 +155,13 @@ body {
     height: 10em;
 }
 
+.spinner-dark,
+.spinner-dark:after {
+    border-radius: 50%;
+    width: 10em;
+    height: 10em;
+}
+
 .spinner {
     margin: auto;
     font-size: 3px;
@@ -162,6 +169,20 @@ body {
     border-right: 1.1em solid rgba(255, 255, 255, 0.2);
     border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
     border-left: 1.1em solid #ffffff;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-animation: load8 1.1s infinite linear;
+    animation: load8 1.1s infinite linear;
+}
+
+.spinner-dark {
+    margin: auto;
+    font-size: 3px;
+    border-top: 1.1em solid rgba(124, 124, 124, 0.2);
+    border-right: 1.1em solid rgba(124, 124, 124, 0.2);
+    border-bottom: 1.1em solid rgba(124, 124, 124, 0.2);
+    border-left: 1.1em solid #000000;
     -webkit-transform: translateZ(0);
     -ms-transform: translateZ(0);
     transform: translateZ(0);
